--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="https://img-shop.pstatic.net/front/naver_favicon.ico?1"
+      type="image/x-icon"
+    />
     <title>BT21</title>
   </head>
   <body>
