--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,11 @@
       href="https://img-shop.pstatic.net/front/naver_favicon.ico?1"
       type="image/x-icon"
     />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <title>BT21</title>
   </head>
   <body>
